# python_advanced

./: .gitignore  README.md
hw1/: README.md  nl.py  pixi.toml  tail.py  wc.py
hw1/artifacts/: text_for_test.txt  text_for_test2.txt
hw2/examples/: Dockerfile  README.md  main_table.tex  main_table_picture.tex  pyproject.toml  table_gen.py  table_picture_gen.py
hw2/latex-gen-small/: pyproject.toml
hw2/latex-gen/latex_gen/: latex_gen.py
hw3/: 3.1_example.py  3.2_example.py  3.3_example.py  README.md  matrix.py  pyproject.toml
hw3/artifacts/3.3/: AB.txt  CD.txt
hw4/: 4.1_example.py  4.2_example.py  4.2_processes_benchmark.py  4.2_threads_benchmark.py  4.3_three process_messaging.py  README.md  my_module.py  pyproject.toml
hw4/artifacts/: 4.1_benchmark_results.txt
hw4/artifacts/4.1/: 4.1_benchmark_results.txt
hw4/artifacts/4.2/: 4.2_processes_full_info.txt  4.2_processes_summary_info.txt  4.2_threads_full_info.txt  4.2_threads_summary_info.txt
hw4/artifacts/4.3/: 4.3_processes_full_info.txt
